--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"/>
 <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <script src="/json.js"></script>
-
+<script src="/script.js"></script>
 </head>
 <body>
 <div class="scroll-up-btn">
