--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                             <i class="fas fa-map-marker-alt"></i>
                             <div class="info">
                                 <div class="head">Address</div>
-                                <div class="sub-title">Talegaon, Pune</div>
+                                <div class="sub-title">Pune, India</div>
                             </div>
                         </div>
                         <div class="row">
