--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 
     <!-- footer section start -->
     <footer>
-        <span>Created By <a href="https://www.codingnepalweb.com">heenaghare</a> | <span class="far fa-copyright"></span> 2020 All rights reserved.</span>
+        <span>Created By heenaghare | <span class="far fa-copyright"></span> 2021 All rights reserved.</span>
     </footer>
 
     <script src="script.js"></script>
