--- a/index.html
+++ b/index.html
@@ -61,7 +61,93 @@
             </div>
         </div>
     </section>
+<section class="site-section " id="section-resume">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-12 mb-5">
+					<div class="section-heading text-center">
+						<h2>My <strong>Resume</strong></h2>
+					</div>
+				</div>
+				<div class="col-md-6">
+					<h2 class="mb-5">Education</h2>
+					<div class="resume-item mb-4">
+						<span class="date"><span class="icon-calendar"></span> June 2015 - June 2019</span>
+						<h3>Bachelors in Information Technology (BE)</h3>
+						<p>Engineering and top of that learnt management skills.</p>
+						<span class="school">Pune University</span>
+					</div>
 
+					<div class="resume-item mb-4">
+						<span class="date"><span class="icon-calendar"></span> March 2015</span>
+						<h3>Schooling</h3>
+						<p>Most memborable days of my life.</p>
+						<span class="school">Kendriya Vidyalaya Nagrota, Jammu</span>
+					</div>
+
+					<!--<div class="resume-item mb-4">
+						<span class="date"><span class="icon-calendar"></span> March 2013 - Present</span>
+						<h3>Masteral in Information Technology</h3>
+						<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
+						<span class="school">New York University</span>
+					</div>
+
+					<div class="resume-item mb-4">
+						<span class="date"><span class="icon-calendar"></span> March 2013 - Present Deacember.</span>
+						<h3>Masteral in Information Technology</h3>
+						<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
+						<span class="school">New York University</span>
+					</div>-->
+
+				</div>
+				<div class="col-md-6">
+
+
+					<h2 class="mb-5">Experience</h2>
+
+					<div class="resume-item mb-4">
+						<span class="date"><span class="icon-calendar"></span> January 2018 - March 2019</span>
+						<h3>Training and Placement Cell</h3>
+						<p>Managed and Volunteered many T&P drives.</p>
+						<span class="school">PCET's NMIET</span>
+					</div>
+
+					<div class="resume-item mb-4">
+						<span class="date"><span class="icon-calendar"></span> August 2019 - April 2021</span>
+						<h3>Software Engineer</h3>
+						<p>Worked as a Data Analyst.<br>Technology Stack: T-SQL,Tableau,Python,MS SSRS,Excel & Macros(VB)</p>
+						<p>1. Development and customization of SQL analytical reports using SSRS and Yardi's built-in reporting tool for clients.<br>
+						   2. Used excel & macros for reporting and data validation as per client's need.<br>
+						  3. Synthesized current business intelligence data to produce reports and polished presentations, highlighting findings and recommending changes.<br>
+						  4. Worked on Retail and developed overage reports for many (UBS,Sun America,CBRE,Norges,AIG,JLL etc.) clients, developed Bank Book reports.<br>
+						  5. Developed excel macro enabled templates for financial data validations, Debt Repayments, Project Management KPI's ETL and reporting purpose.<br>
+						  6. Developed custom SQL triggers and procedures to automate processes.<br>
+						7. Developed Cover letter reports ( credit notes etc.) in word (used merge tokens to pull data from source at runtime) using Yardi's built-in reporting tool.</p>
+						<span class="school"> <strong> <b>Yardi Software Pvt. Ltd.</b> </strong> </span>
+					</div>
+
+					<div class="resume-item mb-4">
+						<span class="date"><span class="icon-calendar"></span> May 2021 - Present </span>
+						<h3>Business Analyst</h3>
+						<p>1. Responsible for analyzing and solving complex problems in a variety of industries.<br>
+						  2. Accountable to handle execution of projects: Requirement gathering, problem formulation & day-to-day problem solving.<br>
+						  3. Applying the right analysis frameworks to develop creative solutions to complex business problems.<br>
+						  4. Planning and executing both short-term and long-range projects and manage teamwork, and client expectations. </p>
+						<span class="school"> <strong><b>Quantiphi Inc.</b></strong> </span>
+					</div>
+
+					<!--<div class="resume-item mb-4">
+						<span class="date"><span class="icon-calendar"></span> September 2020 - Present</span>
+						<h3>Lead Product Designer</h3>
+						<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
+						<span class="school">Shopify</span>
+					</div>-->
+
+
+				</div>
+			</div>
+		</div>
+	</section> <!-- .section -->
     <!-- services section start -->
     <section class="services" id="services">
         <div class="max-width">
