--- a/index.html
+++ b/index.html
@@ -55,7 +55,10 @@
                 </div>
                 <div class="column right">
                     <div class="text">I'm Heena and I'm a <span class="typing-2"></span></div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi ut voluptatum eveniet doloremque autem excepturi eaque, sit laboriosam voluptatem nisi delectus. Facere explicabo hic minus accusamus alias fuga nihil dolorum quae. Explicabo illo unde, odio consequatur ipsam possimus veritatis, placeat, ab molestiae velit inventore exercitationem consequuntur blanditiis omnis beatae. Dolor iste excepturi ratione soluta quas culpa voluptatum repudiandae harum non.</p>
+<p class="lead">I love to make new connections, going outside to different places and exploring new things.
+						           Making websites took my attention. Because of my interest in this, I keep improving my skills.</p>
+					
+					<span> “Every moment is a fresh beginning.” ~T.S. Eliot </span>               
                     <a href="#">Download CV</a>
                 </div>
             </div>
