--- a/index.html
+++ b/index.html
@@ -154,6 +154,7 @@
             <div class="contact-content">
                 <div class="column left">
                     <div class="text">Get in Touch</div>
+			<h2>My Contact Details</h3>
                     <div class="icons">
                         <div class="row">
                             <i class="fas fa-user"></i>
