--- a/index.html
+++ b/index.html
@@ -103,14 +103,14 @@
             <div class="skills-content">
                 <div class="column left">
                     <div class="text">My creative skills & experiences.</div>
-			<h5>Web Developer</h5>
-                        <p>1.collect requirements from clients.</p>
-			<p>2.Design user interface as per user requirements</p>
-			<p>3.Design database structure for UI Forms</p>
-			<p>4.Develope website or web Applications.</p>
-			<p>5.Integrate API</p>
-			<p>6.Purchase Domain name for website hosting</p>
-			<p>7.Purchase host plan and host website.</p>
+			<h4>Web Developer</h4>
+                        <p>1. Collect requirements from clients.</p>
+			<p>2. Design user interface as per user requirements</p>
+			<p>3. Design database structure for UI Forms</p>
+			<p>4. Develope website or web Applications.</p>
+			<p>5. Integrate API</p>
+			<p>6. Purchase Domain name for website hosting</p>
+			<p>7. Purchase host plan and host website.</p>
                 </div>
                 <div class="column right">
                     <div class="bars">
