--- a/index.html
+++ b/index.html
@@ -74,14 +74,14 @@
                     <div class="box">
                         <i class="fas fa-paint-brush"></i>
                         <div class="text">Web Design</div>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
+                        <p>Web Design is the process of creating a website that gives the user a simple, clean, intuitive layout, that works hand in hand with the content to give the user a clear path to engage with your brand.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-chart-line"></i>
                         <div class="text">Advertising</div>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
+                        <p> Generate More Leads. Build Audience. Monetize Content. Grow Customer Base. Quality Audiences. 360B Recommendations. Global Reach. Retarget Consumers. Increase Engagement. </p>
                     </div>
                 </div>
                 <div class="card">
