--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
                 <div class="column right">
                     <div class="text">I'm Heena and I'm a <span class="typing-2"></span></div>
 <p class="lead">I love to make new connections, going outside to different places and exploring new things.
-						           Making websites took my attention. Because of my interest in this, I keep improving my skills.</p>
+				 Making websites took my attention. Because of my interest in this, I keep improving my skills.</p>
 					
 					<span> “Every moment is a fresh beginning.” ~T.S. Eliot </span>               
-                    <a href="#">Download CV</a>
+                   <br> <a href="#">Download CV</a>
                 </div>
             </div>
         </div>
@@ -88,7 +88,7 @@
                     <div class="box">
                         <i class="fas fa-code"></i>
                         <div class="text">Apps Design</div>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
+                        <p>Apps provide multiple entry points Android apps are built as a combination of components that can be invoked individually. </p>
                     </div>
                 </div>
                </div>
