--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <div class="skills-content">
                 <div class="column left">
                     <div class="text">My creative skills & experiences.</div>
-			<h4>Web Developer</h4>
+			<h4>Full Stack Web Developer</h4>
                         <p>1. Collect requirements from clients.</p>
 			<p>2. Design user interface as per user requirements</p>
 			<p>3. Design database structure for UI Forms</p>
@@ -111,6 +111,8 @@
 			<p>5. Integrate API</p>
 			<p>6. Purchase Domain name for website hosting</p>
 			<p>7. Purchase host plan and host website.</p>
+			<p>7. Handling cpanel all operations.</p>
+
                 </div>
                 <div class="column right">
                     <div class="bars">
