--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 </div>
                 <div class="column right">
                     <div class="text">I'm Heena and I'm a <span class="typing-2"></span></div>
-			<p>I am a software developer and have completed my BE from pune's reputed college.</p>
+			<p class="lead">I am a software developer and have completed my BE from pune's reputed college.</p>
 			<p class="lead">I love to make new connections, going outside to different places and exploring new things.
 				 Making websites took my attention. Because of my interest in this, I keep improving my skills.</p>
 					
