--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@
                     </div>
                     <div class="bars">
                         <div class="info">
-                            <span>PHP</span>
-                            <span>50%</span>
+                            <span>React .js</span>
+                            <span>70%</span>
                         </div>
                         <div class="line php"></div>
                     </div>
